Embed resume in header. Fix spacing.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 	font-size: 26px;
 	display: block;
 	float: left;
-	margin: 18px 95px;
+	margin: 18px 100px;
 }
 
 .header-nav > a.active {
